Update:  - fixed slides

--- a/slides/dia_project.tex
+++ b/slides/dia_project.tex
@@ -236,7 +236,7 @@ Each period has the same length of 4 months and is denoted by almost-stationary 
 \begin{figure}[hbtp]
 \centering
 \includegraphics[width=0.8\textwidth]{images/subcampaign_3_abrupt_phases.png}
-\caption{The (Under 40, Experienced) class has the highest interest in product in all phases.}
+\caption{The (Under 40, Experienced) class has the highest interest in the product in all phases.}
 \end{figure}
 \end{frame}
 
@@ -462,7 +462,7 @@ Setting \#1, parameters:
 \begin{figure}[hbtp]
 \centering
 \includegraphics[width=0.8\textwidth]{images/assignment_5_cum_regret.png}
-\caption{If we compare this result with the one obtained in \hyperlink{page.37}{assignment 4}, we can see that we obtain a worse result in terms of cumulative regret, but this is due to the method that we use to compute the optimum in the two cases.}
+\caption{If we compare this result with the one obtained in \hyperlink{page.37}{step 4}, we can see that we obtain a worse outcome in terms of cumulative regret, but this is due to the method that we use to compute the optimum in the two cases.}
 \end{figure}
 \end{frame}
 
@@ -565,7 +565,7 @@ Setting \#1, parameters:
 \begin{figure}[hbtp]
 \centering
 \includegraphics[width=0.8\textwidth]{images/assignment_7_regrets_arm_3_cum_regret.png}
-\caption{The slope of the curve shows an initial phase of learning and exploration that is stopped from 3 phases of suboptimal solutions in which the regret increases linearly.}
+\caption{The slope of the curve shows an initial phase of exploration and then followed by a phase of suboptimal solution in which the regret increases linearly.}
 \end{figure}
 \end{frame}
 
@@ -585,14 +585,14 @@ Setting \#1, parameters:
 			\item Assignment 7: 6977
 		\end{itemize}
 		The difference between the two is due to the imposed price of the assignment 7.
-		\item Assignment 6 shows a slower a increase of instant reward while assignment 7 reaches high values quite immediately. Responsibility lies with the exploration phase of assignment 6 that tries more different prices while assignment 7 has only one imposed price.
+		\item Assignment 6 shows a slower increase of instant reward while assignment 7 reaches high values quite immediately. Responsibility lies with the exploration phase of assignment 6 that tries a wider range of prices while assignment 7 has only one imposed price.
 	\end{itemize}
 \end{frame}
 
 \begin{frame}{Assignment 6 \& 7 Comparison}
 	\begin{itemize}
-		\item Assignment 6 shows a bigger cumulative regret than the one of assignment 7. This can be justified by the initial exploration phase in which a lot of regret is accumulated.
-		\item Assignment 6 has a continuously decreasing slope of cumulative regret while assignment 7 shows a quite linear slope, this underlines that assignment 6 is improving while assignment 7 has settled in a sub-optimal solution.
+		\item Assignment 6 shows a bigger cumulative regret than assignment 7. This can be justified by the initial exploration phase in which a lot of regret is accumulated.
+		\item Assignment 6 has a continuously decreasing slope of cumulative regret while assignment 7 shows a quasi-linear slope, this underlines that assignment 6 is improving while assignment 7 has settled in a sub-optimal solution.
 	\end{itemize}
 \end{frame}
 
