Small update to the slides

--- a/slides/dia_project.tex
+++ b/slides/dia_project.tex
@@ -443,7 +443,7 @@ Setting \#3, parameters:
 |\color{cyan}for| exp |\color{cyan}in| n_experiments:
   |\color{cyan}initialize| context generator 
   |\color{cyan}for| t |\color{cyan}in| time_horizon:
-    |\color{cyan}if| trimester is ended:
+    |\color{cyan}if| week is ended:
       |\color{cyan}generate| new contexts (greedy approach)
     |\color{cyan}for| context |\color{cyan}in| n_contexts:
       |\color{cyan}run| ts algorithm
