Update:  - fixed slides

--- a/slides/dia_project.tex
+++ b/slides/dia_project.tex
@@ -521,7 +521,7 @@ Setting \#1, parameters:
 \end{figure}
 \end{frame}
 
-\begin{frame}{Assignment 6 - Cumulative Reward}
+\begin{frame}{Assignment 6 - Instantaneous Reward}
 \begin{figure}[hbtp]
 \centering
 \includegraphics[width=8cm]{images/assignment_6_inst_reward.png}
